# task_stack_n_track

./: .gitignore  README.md  db_handler.py  gui.py  main.py  pyproject.toml  quest.py  scraper.py
backend/: main.py
backend/interface/: displayable.py  pyqt_gui.py
backend/interface/web_gui/: web_app.py
backend/model/: element.py
db/: db_handler.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  AttributeTypeMap.js  BaseElement.js  ComponentNewElementForm.js  HomePage.js  NewElementForm.js  QuestElement.js  StackableElement.js  SupercategoryPage.css  SupercategoryPage.js  componentMapping.js
frontend/src/AttributeComponents/: CheckboxAttribute.js  TextAttribute.js  TitleAttribute.js
frontend/src/services/: elementService.js
interface/: displayable.py  gui.py  pyqt_gui.py
interface/web_gui/: web_app.py
interface/web_gui/static/js/: script.js
interface/web_gui/templates/: index.html  supercategories.html
model/: displayable.py  element.py
scraping/: scraper.py
