[tool.poetry]
name = "repl_nix_OPT2questsviewer"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.9"
requests = "^2.30.0"
bs4 = "^0.0.1"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
